force-app/main/default/objects/Village__c/fields/Std_Fit_Out_weeks__c.field-meta.xml
<CustomField>
    <fullName>Std_Fit_Out_weeks__c</fullName>
    <inlineHelpText>Enter the standard period allowed for shop fit in weeks</inlineHelpText>
    <label>Std Fit Out (weeks)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>