force-app/main/default/objects/Village__c/fields/Std_Initial_Marketing_Fee_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Initial_Marketing_Fee_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Initial Marketing Fee Clause</inlineHelpText>
    <label>Std Initial Marketing Fee Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>