force-app/main/default/objects/Village__c/fields/Std_Insurance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Std_Insurance_Fee__c</fullName>
    <inlineHelpText>Enter the standard insurance fee for the village, this is expressed as an amount in village currency per village metric e.g. BV is £1.12 per sq.ft</inlineHelpText>
    <label>Std Insurance Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>