force-app/main/default/objects/Village__c/fields/Std_Lease_Term_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Lease_Term_Clause__c</fullName>
    <inlineHelpText>Enter the standard term for deals in this village</inlineHelpText>
    <label>Std Lease Term Clause</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>