force-app/main/default/objects/Village__c/fields/Std_Lease_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Std_Lease_Term_months__c</fullName>
    <defaultValue>120</defaultValue>
    <inlineHelpText>Enter the standard lease term in months for leases in this village</inlineHelpText>
    <label>Std Lease Term (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>