force-app/main/default/objects/Village__c/fields/Std_Legal_Costs_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Legal_Costs_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Legal Costs Clause</inlineHelpText>
    <label>Std Legal Costs Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>