force-app/main/default/objects/Village__c/fields/Std_Legal_Fees__c.field-meta.xml
<CustomField>
    <fullName>Std_Legal_Fees__c</fullName>
    <inlineHelpText>Enter the standard amount off legal fees to be charged to the tenant for a new lease</inlineHelpText>
    <label>Std Legal Fees</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>