force-app/main/default/objects/Village__c/fields/Std_LFDA_Fee__c.field-meta.xml
<CustomField>
    <fullName>Std_LFDA_Fee__c</fullName>
    <inlineHelpText>Enter the standard Landlord Fit-out Drawing Approval fee for leases in this village</inlineHelpText>
    <label>Std LFDA Fee</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>