force-app/main/default/objects/Village__c/fields/Std_Licence_Fee_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Licence_Fee_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Licence Fee Clause</inlineHelpText>
    <label>Std Licence Fee Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>