force-app/main/default/objects/Village__c/fields/Std_LSA_Fee_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_LSA_Fee_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Landlord&apos;s Shopfit Approval Fee clause</inlineHelpText>
    <label>Std Shopfit Fee Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>