force-app/main/default/objects/Village__c/fields/Std_Maintenance_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Maintenance_Clause__c</fullName>
    <inlineHelpText>Enter the standard maintenance clause for this village</inlineHelpText>
    <label>Std Maintenance Clause</label>
    <length>1048</length>
    <type>LongTextArea</type>
</CustomField>