force-app/main/default/objects/Village__c/fields/Std_Maintenance_Period__c.field-meta.xml
<CustomField>
    <fullName>Std_Maintenance_Period__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Enter the standard contractual Shopfit Obligation period in years</inlineHelpText>
    <label>Std Shopfit Obligation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>