force-app/main/default/objects/Village__c/fields/Std_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Std_Management_Fee__c</fullName>
    <inlineHelpText>Enter the Service Charge per square metre per month to be offered on leases in this village</inlineHelpText>
    <label>Service Charge</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>