force-app/main/default/objects/Village__c/fields/Std_Marketing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Std_Marketing_Fee__c</fullName>
    <inlineHelpText>Enter the Standard Marketing fee to used for all leases in this Village</inlineHelpText>
    <label>Std Marketing Fee</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>