force-app/main/default/objects/Village__c/fields/Std_Non_Compete_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Non_Compete_Clause__c</fullName>
    <inlineHelpText>Enter the text of the standard non compete clause</inlineHelpText>
    <label>Std Non Compete Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>