force-app/main/default/objects/Village__c/fields/Std_Non_Compete_Distance__c.field-meta.xml
<CustomField>
    <fullName>Std_Non_Compete_Distance__c</fullName>
    <inlineHelpText>Enter the distance to be used in the standard non-compete clause</inlineHelpText>
    <label>Std Non Compete Distance</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>