force-app/main/default/objects/Village__c/fields/Std_Notice_Period_months__c.field-meta.xml
<CustomField>
    <fullName>Std_Notice_Period_months__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Enter the standard notice period in months for leases in this village</inlineHelpText>
    <label>Std Notice Period (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>