force-app/main/default/objects/Village__c/fields/Std_Relocation_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Relocation_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Landlord&apos;s Relocation Rights Clause</inlineHelpText>
    <label>Std Relocation Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>