force-app/main/default/objects/Village__c/fields/Std_Repayment_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Repayment_Clause__c</fullName>
    <inlineHelpText>Enter the standard repayment terms offered by the landlord in the event of the landlord invoking early termination</inlineHelpText>
    <label>Std Repayment Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>