force-app/main/default/objects/Village__c/fields/Std_Required_ToR__c.field-meta.xml
<CustomField>
    <fullName>Std_Required_ToR__c</fullName>
    <defaultValue>0.18</defaultValue>
    <inlineHelpText>Enter the standard turnover rent required for leases for this village</inlineHelpText>
    <label>Std Required ToR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>