force-app/main/default/objects/Village__c/fields/Std_Service_Charge_Basis__c.field-meta.xml
<CustomField>
    <fullName>Std_Service_Charge_Basis__c</fullName>
    <inlineHelpText>Set the standard size metric for calculating Service Charge or Management Fee</inlineHelpText>
    <label>Std Service Charge Basis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GEA</fullName>
            </value>
            <value>
                <fullName>GIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>