force-app/main/default/objects/Village__c/fields/Std_Service_Charge_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Service_Charge_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Service Charge or Management Fee Clause</inlineHelpText>
    <label>Std Service Charge Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>