force-app/main/default/objects/Village__c/fields/Std_Shop_fit_contribution__c.field-meta.xml
<CustomField>
    <fullName>Std_Shop_fit_contribution__c</fullName>
    <inlineHelpText>Enter the standard shop fit contribution % to be offered on leases in this village</inlineHelpText>
    <label>Std Shop fit contribution</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>