force-app/main/default/objects/Village__c/fields/Std_Shop_Fit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Std_Shop_Fit_Cost__c</fullName>
    <inlineHelpText>Enter the standard shop fit cost per square metre</inlineHelpText>
    <label>Std Shop Fit Cost</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>