force-app/main/default/objects/Village__c/fields/Std_T_O_Rent_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_T_O_Rent_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Turnover Rent Clause</inlineHelpText>
    <label>Std T/O Rent Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>