force-app/main/default/objects/Village__c/fields/Std_Termination_Costs__c.field-meta.xml
<CustomField>
    <fullName>Std_Termination_Costs__c</fullName>
    <inlineHelpText>Enter the standard termination repayment costs for leases in this village</inlineHelpText>
    <label>Std Termination Costs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st year 50%</fullName>
            </value>
            <value>
                <fullName>2nd year 30%</fullName>
            </value>
            <value>
                <fullName>3rd year 20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>