force-app/main/default/objects/Village__c/fields/Std_Trading_Hours_Clause__c.field-meta.xml
<CustomField>
    <fullName>Std_Trading_Hours_Clause__c</fullName>
    <inlineHelpText>Enter the Standard Trading Hours Clause</inlineHelpText>
    <label>Std Trading Hours Clause</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>