force-app/main/default/objects/Village__c/fields/Std_VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>Std_VAT_Rate__c</fullName>
    <inlineHelpText>Enter the standard rate of  VAT for this village</inlineHelpText>
    <label>Std VAT Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>