force-app/main/default/objects/Village__c/fields/Std_Yield_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Std_Yield_Expectation__c</fullName>
    <inlineHelpText>Enter This Year&apos;s Budgeted Village Avg Yield</inlineHelpText>
    <label>TY Budgeted Village Avg Yield</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>