force-app/main/default/objects/Village__c/fields/Sustainability__c.field-meta.xml
<CustomField>
    <fullName>Sustainability__c</fullName>
    <description>Sustainability</description>
    <inlineHelpText>Sustainability</inlineHelpText>
    <label>Sustainability</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>