force-app/main/default/objects/Village__c/fields/Tax_Refund_potential_of_market__c.field-meta.xml
<CustomField>
    <fullName>Tax_Refund_potential_of_market__c</fullName>
    <description>Tax Refund potential of market</description>
    <inlineHelpText>Tax Refund potential of market</inlineHelpText>
    <label>Tax Refund potential of market</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>