force-app/main/default/objects/Village__c/fields/Total_GEA__c.field-meta.xml
<CustomField>
    <fullName>Total_GEA__c</fullName>
    <inlineHelpText>Sum of the GEA of all units currently NOT omitted from the Village Total GEA</inlineHelpText>
    <label>Total GEA</label>
    <summarizedField>Unit__c.Size_GEA__c</summarizedField>
    <summaryFilterItems>
        <field>Unit__c.Omit_from_Village_GEA__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit__c.Village__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>