force-app/main/default/objects/Village__c/fields/Total_GIA__c.field-meta.xml
<CustomField>
    <fullName>Total_GIA__c</fullName>
    <inlineHelpText>Sum of all the Units GIA not omitted from the totals</inlineHelpText>
    <label>Total GIA</label>
    <summarizedField>Unit__c.Size_GIA__c</summarizedField>
    <summaryFilterItems>
        <field>Unit__c.Omit_from_Village_GEA__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Unit__c.Village__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>