force-app/main/default/objects/Village__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unique Internal Idntifier of the Villafe</inlineHelpText>
    <label>UID</label>
    <type>Text</type>
</CustomField>