force-app/main/default/objects/Village__c/fields/Village_Closed_Days__c.field-meta.xml
<CustomField>
    <fullName>Village_Closed_Days__c</fullName>
    <inlineHelpText>The number of days the village will be closed during the current year</inlineHelpText>
    <label>Village Closed Days</label>
    <summarizedField>Village_Closed_Period__c.Village_Days_Closed__c</summarizedField>
    <summaryFilterItems>
        <field>Village_Closed_Period__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Village_Closed_Period__c.Village__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>