force-app/main/default/objects/Village__c/fields/Village_Code__c.field-meta.xml
<CustomField>
    <fullName>Village_Code__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter the 2 digit Village Code used to identify the Village</inlineHelpText>
    <label>Village Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>