force-app/main/default/objects/Village__c/fields/Village_Evolution__c.field-meta.xml
<CustomField>
    <fullName>Village_Evolution__c</fullName>
    <description>Village Evolution</description>
    <inlineHelpText>Village Evolution</inlineHelpText>
    <label>Village Evolution</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>