force-app/main/default/objects/Village__c/fields/Village_GEA__c.field-meta.xml
<CustomField>
    <fullName>Village_GEA__c</fullName>
    <inlineHelpText>Enter the overall Gross External Area for the Village</inlineHelpText>
    <label>Village GEA</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>