force-app/main/default/objects/Village__c/fields/Village_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>Village_GeoLocation__c</fullName>
    <label>Village GeoLocation</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>