force-app/main/default/objects/Village__c/fields/Village_GeoLocation_Text__c.field-meta.xml
<CustomField>
    <fullName>Village_GeoLocation_Text__c</fullName>
    <formula>TEXT(  Village_GeoLocation__Latitude__s )&amp;&quot; &quot;&amp;TEXT(  Village_GeoLocation__Longitude__s  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Village_GeoLocation_Text</label>
    <type>Text</type>
</CustomField>