force-app/main/default/objects/Village__c/fields/Village_GIA__c.field-meta.xml
<CustomField>
    <fullName>Village_GIA__c</fullName>
    <inlineHelpText>Enter the Gross Internal Area of the Village if known</inlineHelpText>
    <label>Village GIA</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>