force-app/main/default/objects/Village__c/fields/Village_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Village_Grace_Period__c</fullName>
    <label>Village Grace Period</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>