force-app/main/default/objects/Village__c/fields/Village_Local_Language__c.field-meta.xml
<CustomField>
    <fullName>Village_Local_Language__c</fullName>
    <inlineHelpText>Select the default language to be used for B2C communications</inlineHelpText>
    <label>Village Local Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>