force-app/main/default/objects/Village__c/fields/Village_Logo__c.field-meta.xml
<CustomField>
    <fullName>Village_Logo__c</fullName>
    <formula>IF(ISBLANK(Village_Logo_Id__c), &quot;&quot;, IMAGE(LEFT($Api.Partner_Server_URL_140, FIND(&apos;.com/&apos;,$Api.Partner_Server_URL_140)+3) + &quot;/servlet/servlet.FileDownload?file=&quot; &amp; Village_Logo_Id__c , &quot;vr&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Village Logo</label>
    <type>Text</type>
</CustomField>