force-app/main/default/objects/Village__c/fields/Village_Logo_Id__c.field-meta.xml
<CustomField>
    <fullName>Village_Logo_Id__c</fullName>
    <label>Village Logo Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>