force-app/main/default/objects/Village__c/fields/Village_Size_Metric__c.field-meta.xml
<CustomField>
    <fullName>Village_Size_Metric__c</fullName>
    <inlineHelpText>Select the metric for size measurements in this village</inlineHelpText>
    <label>Village Size Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sq.m</fullName>
                <default>true</default>
                <label>sq.m</label>
            </value>
            <value>
                <fullName>sq.ft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>