force-app/main/default/objects/Village__c/fields/VR_Finance_Email__c.field-meta.xml
<CustomField>
    <fullName>VR_Finance_Email__c</fullName>
    <inlineHelpText>The email address where the email notifications of Sales Certification submissions will be sent to</inlineHelpText>
    <label>VR Finance Email</label>
    <type>Email</type>
</CustomField>