force-app/main/default/objects/Village__c/validationRules/Cannot_be_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_zero</fullName>
    <active>true</active>
    <errorConditionFormula>OR(FX_Rate_to_Group_CCY__c  &lt;= 0, ISBLANK( FX_Rate_to_Group_CCY__c) )</errorConditionFormula>
    <errorDisplayField>FX_Rate_to_Group_CCY__c</errorDisplayField>
    <errorMessage>The FX rate cannot be less than or equal to zero or blank</errorMessage>
</ValidationRule>