force-app/main/default/objects/Village__c/validationRules/Restrict_update_of_Village_Name_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_update_of_Village_Name_Code</fullName>
    <active>true</active>
    <description>Restrict update of Village Name &amp; Code</description>
    <errorConditionFormula>AND ( 
OR ( 
ISCHANGED (Name) , 
ISCHANGED (Village_Code__c) ) &amp;&amp; 
$User.Profile_Name__c = &apos;Finance Sales Certification&apos; 
)</errorConditionFormula>
    <errorMessage>You do not have permission to edit the Village Name and Village Code.</errorMessage>
</ValidationRule>