force-app/main/default/objects/Village__c/validationRules/VLR_GracePeriodRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VLR_GracePeriodRule</fullName>
    <active>true</active>
    <description>Cert Sales Reported Sales Grace Period Days should be greater than or equal to the CertSales CertPeriod Open Days.</description>
    <errorConditionFormula>IF(CertSales_CertPeriod_Open_Days__c &lt;= CertSales_Report_Sales_Grace_Period_Days__c, false, true)</errorConditionFormula>
    <errorDisplayField>CertSales_Report_Sales_Grace_Period_Days__c</errorDisplayField>
    <errorMessage>Cert Sales Reported Sales Grace Period Days should be greater than or equal to the CertSales CertPeriod Open Days.</errorMessage>
</ValidationRule>