force-app/main/default/objects/Village__c/validationRules/VLR_OpenDayRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VLR_OpenDayRule</fullName>
    <active>true</active>
    <description>CertSales CertPeriod Open Days should be greater than or equal to zero, and less than or equal to the Cert Sales Reported Sales Grace Period Days.</description>
    <errorConditionFormula>IF(AND(0 &lt;= CertSales_CertPeriod_Open_Days__c, CertSales_CertPeriod_Open_Days__c&lt;= CertSales_Report_Sales_Grace_Period_Days__c), false, true)</errorConditionFormula>
    <errorDisplayField>CertSales_CertPeriod_Open_Days__c</errorDisplayField>
    <errorMessage>CertSales CertPeriod Open Days should be greater than or equal to zero, and less than or equal to the Cert Sales Reported Sales Grace Period Days.</errorMessage>
</ValidationRule>