force-app/main/default/objects/Village__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Village_Logo__c</columns>
    <columns>NAME</columns>
    <columns>Village_Code__c</columns>
    <columns>Total_GEA__c</columns>
    <columns>Retail_Live_Execs__c</columns>
    <columns>Default_Daily_Sales_Record_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>